[package]
name = "tactful"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
# rename `rust_iso3166` to `country_codes` to improve code readability
# All the country codes in rust_iso3166 are crate-level constants. For example, it is not at all
# obvious what `rust_iso3166::CH` is supposed to mean. `country_codes::CH`, however, clearly
# indicates that "CH" is a country code.
country_codes = { version = "0.1.10", package = "rust_iso3166" }
ical_vcard = "0.2.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
